--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,4 +1,4 @@
-<form action="/new-contact" method="POST">
+<form action="/update-contact/hjzKJXDsPg26PXaQXckN" method="POST">
   <input type="text" name="firstname" placeholder="First name">
   <input type="text" name="lastname" placeholder="Last name">
   <input type="text" name="email" placeholder="Email">
